--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
     "multer": "^1.4.2",
-    "multer-s3": "^2.9.0"
+    "multer-s3": "^2.9.0",
+    "nodejs": "0.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
