--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "amazona",
+  "name": "q_agil-ecovoy40",
   "version": "1.0.0",
-  "description": "Demo : https://amazonaapp.herokuapp.com/",
+  "description": "Demo : https://hidden-meadow-74120.herokuapp.com/",
   "main": "index.js",
   "dependencies": {
     "aws-sdk": "^2.702.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "eslint-plugin-react": "^7.19.0",
+    "dotenv": "^8.6.0",
+    "eol": "^0.9.1",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
+    "mongo": "^0.1.0",
+    "mongoclient": "^1.0.3",
+    "mongodb": "^3.6.6",
     "mongoose": "^5.8.11",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
-    "nodejs": "0.0.0"
+    "nodejs": "0.0.0",
+    "socket.io": "^4.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -24,6 +31,7 @@
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^2.5.1",
     "nodemon": "^2.0.2"
   },
@@ -34,14 +42,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/basir/amazona.git"
+    "url": "git+https://github.com/qragile/q_agil-ecovoy40.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/basir/amazona/issues"
+    "url": "https://github.com/qragile/q_agil-ecovoy40.git"
   },
-  "homepage": "https://github.com/basir/amazona#readme",
+  "homepage": "https://github.com/qragile/q_agil-ecovoy40.git",
   "engines": {
     "node": "12.4.0",
     "npm": "6.9.0"
