--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^1.13.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.2",
-    "js-cookie": "^2.2.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "axios": "^0.20.0",
+    "mongoclient": "^1.0.3",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-google-charts": "^3.0.15",
+    "react-paypal-button-v2": "^2.6.3",
+    "react-redux": "^7.2.4",
+    "react-responsive-carousel": "^3.2.18",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
