--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "aws-sdk": "^2.702.0",
+    "babel-node": "0.0.1-security",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.6.0",
@@ -27,14 +28,15 @@
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "babel-cli": "^6.26.0",
+    "@babel/register": "^7.13.16",
+    "babel-core": "^7.0.0-bridge.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.7"
   },
   "scripts": {
     "start": "nodemon --watch backend --exec babel-node backend/server.js",
@@ -52,7 +54,7 @@
   },
   "homepage": "https://github.com/qragile/q_agil-ecovoy40.git",
   "engines": {
-    "node": "12.4.0",
-    "npm": "6.9.0"
+    "node": "14.16.1",
+    "npm": "6.14.12"
   }
 }
