--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "nodejs": "0.0.0",
+    "proxi": "0.0.1",
     "socket.io": "^4.1.1"
   },
   "devDependencies": {
