--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://127.0.0.1:8080",
+  "proxy": "http://127.0.0.1:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,20 +9,17 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
-    "express": "^4.17.1",
-    "knex": "^0.95.6",
-    "mongoclient": "^1.0.3",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-google-charts": "^3.0.15",
-    "react-paypal-button-v2": "^2.6.3",
-    "react-redux": "^7.2.4",
-    "react-responsive-carousel": "^3.2.18",
+    "react-paypal-button-v2": "^2.6.2",
+    "react-redux": "^7.2.1",
+    "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
-    "redux": "^4.1.0",
+    "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^4.1.1"
+    "socket.io-client": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
